devops-mgmt-k8s-app/nexus.yaml
# create a nexus deployment in devops-tools namespace
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: build
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-server
  template:
    metadata:
      labels:
        app: nexus-server
    spec:
      securityContext:
        fsGroup: 200

      containers:
      - name: nexus
        image: sonatype/nexus3:latest

        securityContext:
          runAsUser: 200
          runAsGroup: 200

        ports:
        - containerPort: 8081

        resources:
          limits:
            memory: "4Gi"
            cpu: "1000m"
          requests:
            memory: "2Gi"
            cpu: "500m"

        volumeMounts:
        - name: nexus-data
          mountPath: /nexus-data

      volumes:
      - name: nexus-data
        persistentVolumeClaim:
          claimName: nexus-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  namespace: build
spec:
  selector: 
    app: nexus-server
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8081   

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: build
  labels:
    app: nexus-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nexus.mgmt.ocelottraining.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nexus-service
            port: 
              number: 80
