devops-mgmt-k8s-app/sonar.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: build
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: sonarqube
          image: sonarqube:community
          ports:
            - containerPort: 9000    
          resources:
            requests:
              cpu: 500m
              memory: 1024Mi
            limits:
              cpu: 2000m
              memory: 2048Mi
          volumeMounts:
            - name: sonar-data
              mountPath: /opt/sonarqube/data
              subPath: sonarqube-data
            - name: sonar-extensions
              mountPath: /opt/sonarqube/extensions
              subPath: sonarqube-extensions
      volumes:
        - name: sonar-data
          persistentVolumeClaim:
            claimName: sonar-data-claim
        - name: sonar-extensions
          persistentVolumeClaim:
            claimName: sonar-extensions-claim
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube
  namespace: build
  labels:
    app: sonarqube
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: sonar.mgmt.ocelottraining.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarqube
                port:
                  number: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: build
spec:
  selector:
    app: sonarqube
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
